--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=benimSifrem
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.main.allow-circular-references=true
-server.port=8081
-#because of postgres admin
+server.port=8082
+#because of postgres admin and redis-commander
+spring.redis.host=localhost
+spring.redis.port=6379
